--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="content index py4">
 
     <header id="header">
-  <a href="https://kanetu.github.io">
+  <a href="https://kanetu.github.io/">
   
     <div id="logo" style="background-image: url(https://kanetu.github.io/images/logo.png)"></div>
   
